# asana-to-jira

./: LICENSE  README.md  pyproject.toml
asana_to_jira/: asana_client.py  migrate.py
