[tool.poetry]
name = "asana-to-jira"
version = "0.1.0"
description = ""
authors = ["Tibo Delor <delor.thibault@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
aiohttp = "^3.7.4"
jira = "^3.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
autopep8 = "^1.5.7"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
